--- a/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/Cells/LottieTableViewCell.xib
+++ b/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/Cells/LottieTableViewCell.xib
@@ -4,41 +4,37 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="222" id="KGk-i7-Jjw" customClass="LottieTableViewCell" customModule="HydrationTracking_GOQii_AdityaGhadge" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="222"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="236" id="KGk-i7-Jjw" customClass="LottieTableViewCell" customModule="HydrationTracking_GOQii_AdityaGhadge" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="236"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="222"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="236"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Fu-tf-sIT">
-                        <rect key="frame" x="30" y="10" width="260" height="200"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ASy-58-P5x">
+                        <rect key="frame" x="20" y="20" width="280" height="200"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="200" id="bFQ-iw-RhC"/>
+                            <constraint firstAttribute="height" constant="200" id="XrR-Yu-jpB"/>
                         </constraints>
-                    </view>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="7Fu-tf-sIT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="KYA-Bp-9uV"/>
-                    <constraint firstItem="7Fu-tf-sIT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="Yyx-OS-rCA"/>
-                    <constraint firstAttribute="trailing" secondItem="7Fu-tf-sIT" secondAttribute="trailing" constant="30" id="u4d-I0-ahi"/>
-                    <constraint firstAttribute="bottom" secondItem="7Fu-tf-sIT" secondAttribute="bottom" constant="10" id="urK-3s-9cj"/>
+                    <constraint firstAttribute="bottom" secondItem="ASy-58-P5x" secondAttribute="bottom" constant="10" id="MOC-Uf-bCt"/>
+                    <constraint firstItem="ASy-58-P5x" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="T68-bX-HSX"/>
+                    <constraint firstItem="ASy-58-P5x" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="bJZ-XO-0Vg"/>
+                    <constraint firstAttribute="trailing" secondItem="ASy-58-P5x" secondAttribute="trailing" constant="20" id="gLY-EP-qWi"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="83.969465648854964" y="-19.014084507042256"/>
+            <connections>
+                <outlet property="customImageView" destination="ASy-58-P5x" id="FzK-tJ-8s8"/>
+            </connections>
+            <point key="canvasLocation" x="83.969465648854964" y="-14.084507042253522"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
