--- a/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/Cells/SetProgressTableViewCell.xib
+++ b/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/Cells/SetProgressTableViewCell.xib
@@ -13,30 +13,30 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="169" id="KGk-i7-Jjw" customClass="SetProgressTableViewCell" customModule="HydrationTracking_GOQii_AdityaGhadge" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="169"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="169"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="vxm-Gf-a7T">
-                        <rect key="frame" x="20" y="10" width="280" height="150"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SnI-2G-vLT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="169"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sj-zn-6PW">
-                                <rect key="frame" x="0.0" y="0.0" width="280" height="40"/>
+                                <rect key="frame" x="20" y="10" width="280" height="24"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tO2-Jx-Fu3">
-                                        <rect key="frame" x="0.0" y="0.0" width="178.66666666666666" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="178.66666666666666" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAf-aw-sYH">
-                                        <rect key="frame" x="268.66666666666669" y="0.0" width="11.333333333333314" height="40"/>
+                                        <rect key="frame" x="268.66666666666669" y="0.0" width="11.333333333333314" height="24"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I2T-LQ-CRA">
-                                        <rect key="frame" x="193.66666666666666" y="0.0" width="60" height="40"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I2T-LQ-CRA">
+                                        <rect key="frame" x="193.66666666666666" y="-8" width="60" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="y4J-u5-vJF"/>
                                             <constraint firstAttribute="height" constant="40" id="zlm-R2-I2y"/>
@@ -59,22 +59,22 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7p-SN-6M7">
-                                <rect key="frame" x="0.0" y="55" width="280" height="40"/>
+                                <rect key="frame" x="20" y="75" width="280" height="24"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UX6-5V-72F">
-                                        <rect key="frame" x="0.0" y="0.0" width="178.66666666666666" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="178.66666666666666" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOi-Gb-F7B">
-                                        <rect key="frame" x="268.66666666666669" y="0.0" width="11.333333333333314" height="40"/>
+                                        <rect key="frame" x="268.66666666666669" y="0.0" width="11.333333333333314" height="24"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kbD-Fl-30t">
-                                        <rect key="frame" x="193.66666666666666" y="0.0" width="60" height="40"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kbD-Fl-30t">
+                                        <rect key="frame" x="193.66666666666666" y="-8" width="60" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="60" id="23K-I1-lPM"/>
                                             <constraint firstAttribute="height" constant="40" id="iDT-bA-CvE"/>
@@ -97,12 +97,13 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpH-61-m5v">
-                                <rect key="frame" x="0.0" y="110" width="280" height="40"/>
+                                <rect key="frame" x="20" y="119" width="280" height="40"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5e-Gi-J3O">
                                         <rect key="frame" x="90" y="0.0" width="100" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="1gZ-P0-dpX"/>
+                                            <constraint firstAttribute="height" constant="40" id="rmu-t8-3qk"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
@@ -119,16 +120,25 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="150" id="ddM-m3-zls"/>
+                            <constraint firstAttribute="trailing" secondItem="5sj-zn-6PW" secondAttribute="trailing" constant="20" id="5sp-cz-lEn"/>
+                            <constraint firstItem="5sj-zn-6PW" firstAttribute="top" secondItem="SnI-2G-vLT" secondAttribute="top" constant="10" id="JPY-px-Xee"/>
+                            <constraint firstItem="j7p-SN-6M7" firstAttribute="leading" secondItem="SnI-2G-vLT" secondAttribute="leading" constant="20" id="MJu-Lr-dkc"/>
+                            <constraint firstItem="cpH-61-m5v" firstAttribute="leading" secondItem="SnI-2G-vLT" secondAttribute="leading" constant="20" id="Z6e-d2-2oD"/>
+                            <constraint firstItem="cpH-61-m5v" firstAttribute="top" secondItem="j7p-SN-6M7" secondAttribute="bottom" constant="20" id="k39-Va-Lf4"/>
+                            <constraint firstAttribute="trailing" secondItem="j7p-SN-6M7" secondAttribute="trailing" constant="20" id="mCK-7M-fJe"/>
+                            <constraint firstAttribute="trailing" secondItem="cpH-61-m5v" secondAttribute="trailing" constant="20" id="tOC-E1-NFB"/>
+                            <constraint firstAttribute="bottom" secondItem="cpH-61-m5v" secondAttribute="bottom" constant="10" id="vof-Te-5S9"/>
+                            <constraint firstItem="5sj-zn-6PW" firstAttribute="leading" secondItem="SnI-2G-vLT" secondAttribute="leading" constant="20" id="wGh-og-RvG"/>
                         </constraints>
-                    </stackView>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="vxm-Gf-a7T" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="2Y8-hZ-qLt"/>
-                    <constraint firstItem="vxm-Gf-a7T" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="r0k-BU-Ypl"/>
-                    <constraint firstAttribute="bottom" secondItem="vxm-Gf-a7T" secondAttribute="bottom" constant="10" id="r7q-Fz-u0Z"/>
-                    <constraint firstAttribute="trailing" secondItem="vxm-Gf-a7T" secondAttribute="trailing" constant="20" id="zz1-eN-IAN"/>
+                    <constraint firstItem="SnI-2G-vLT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="CGN-oi-Wz8"/>
+                    <constraint firstAttribute="bottom" secondItem="SnI-2G-vLT" secondAttribute="bottom" id="VqP-cg-uPH"/>
+                    <constraint firstItem="SnI-2G-vLT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="eBX-ZT-fsN"/>
+                    <constraint firstAttribute="trailing" secondItem="SnI-2G-vLT" secondAttribute="trailing" id="zf0-BH-9Bp"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
