--- a/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/HomeViewController.xib
+++ b/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/HomeViewController.xib
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="HydrationTracking_GOQii_AdityaGhadge" customModuleProvider="target">
             <connections>
                 <outlet property="tblView" destination="CkC-Db-IIf" id="600-qW-xge"/>
-                <outlet property="titleLbl" destination="Kmw-JY-CUK" id="fTo-SA-c7H"/>
+                <outlet property="titleLbl" destination="dnR-L4-VwW" id="k31-ly-n4J"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,30 +20,27 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kmw-JY-CUK">
-                    <rect key="frame" x="20" y="79" width="353" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="n4e-0t-kdv"/>
-                    </constraints>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dnR-L4-VwW">
+                    <rect key="frame" x="20" y="79" width="353" height="30"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                    <color key="textColor" red="0.43137254901960786" green="0.70588235294117641" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="0.43137254899999999" green="0.70588235290000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CkC-Db-IIf">
-                    <rect key="frame" x="0.0" y="149" width="393" height="703"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CkC-Db-IIf">
+                    <rect key="frame" x="0.0" y="129" width="393" height="723"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="CkC-Db-IIf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5mT-vf-fQm"/>
-                <constraint firstItem="Kmw-JY-CUK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Bl9-sG-rm3"/>
-                <constraint firstItem="CkC-Db-IIf" firstAttribute="top" secondItem="Kmw-JY-CUK" secondAttribute="bottom" constant="20" id="Yyv-XR-nDt"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="dnR-L4-VwW" secondAttribute="trailing" constant="20" id="VwL-Bf-k5t"/>
+                <constraint firstItem="CkC-Db-IIf" firstAttribute="top" secondItem="dnR-L4-VwW" secondAttribute="bottom" constant="20" id="e6t-f7-Ca4"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CkC-Db-IIf" secondAttribute="trailing" id="ece-Ob-ADe"/>
                 <constraint firstAttribute="bottom" secondItem="CkC-Db-IIf" secondAttribute="bottom" id="hj8-Vy-Aiu"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Kmw-JY-CUK" secondAttribute="trailing" constant="20" id="pnr-Wd-SYF"/>
-                <constraint firstItem="Kmw-JY-CUK" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="u5B-FH-Qlu"/>
+                <constraint firstItem="dnR-L4-VwW" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="k86-qI-LwW"/>
+                <constraint firstItem="dnR-L4-VwW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="oE4-Fx-wB5"/>
             </constraints>
             <point key="canvasLocation" x="93.89312977099236" y="20.422535211267608"/>
         </view>
