--- a/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/Cells/SetProgressTableViewCell.xib
+++ b/HydrationTracking_GOQii_AdityaGhadge/Modules/Home/View/Cells/SetProgressTableViewCell.xib
@@ -99,14 +99,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpH-61-m5v">
                                 <rect key="frame" x="20" y="119" width="280" height="40"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5e-Gi-J3O">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5e-Gi-J3O">
                                         <rect key="frame" x="90" y="0.0" width="100" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="1gZ-P0-dpX"/>
                                             <constraint firstAttribute="height" constant="40" id="rmu-t8-3qk"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <connections>
                                             <action selector="submitBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="jnC-5i-pTg"/>
                                         </connections>
